# aoc2024

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/: day_one.cpp  day_two.cpp
